--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-hostfile = hosts
-private_key_file=~/.vagrant.d/insecure_private_key
-remote_user = vagrant
+inventory = hosts
+private_key_file= ~/.ssh/luiscachog.io_rsa.pub
+remote_user = root
