--- a/roles/bootstrap/handlers/main.yml
+++ b/roles/bootstrap/handlers/main.yml
@@ -2,8 +2,8 @@
 - name: update tzdata
   command: /usr/sbin/dpkg-reconfigure --frontend noninteractive tzdata
 
-- name: restart nullmailer
-  service: name=nullmailer state=restarted
+- name: restart postfix
+  service: name=postfix state=restarted
 
 - name: restart ssh
   service: name=ssh state=restarted
