--- a/roles/bootstrap/tasks/security.yml
+++ b/roles/bootstrap/tasks/security.yml
@@ -14,5 +14,6 @@
   ufw: state=enabled policy=reject
 
 - name: Allow ssh access
-  ufw: rule=allow port={{item}}
-  with_items: ufw_ports
+  ufw: rule=allow port="{{item}}"
+  with_items:
+    - "{{ ufw_ports }}"
