--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -2,8 +2,8 @@
  - include: files.yml
  - include: locale.yml
  - include: apt.yml
- - include: users.yml
- - include: security.yml
+# - include: users.yml
+# - include: security.yml
  - include: files.yml
  - include: mailgun.yml
  - include: newrelic.yml
