Testing Travis.cl

--- a/roles/bootstrap/tasks/main.yml
+++ b/roles/bootstrap/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
  - include: files.yml
- - include: locale.yml
- - include: apt.yml
-# - include: users.yml
-# - include: security.yml
+   # - include: locale.yml
+   # - include: apt.yml
+ - include: users.yml
+   #- include: security.yml
  - include: files.yml
  - include: mailgun.yml
- - include: newrelic.yml
+   # - include: newrelic.yml
