--- a/roles/bootstrap/tasks/apt.yml
+++ b/roles/bootstrap/tasks/apt.yml
@@ -1,13 +1,26 @@
 ---
 - apt: update_cache=yes
+  become: true
 
 - apt: pkg=git,git-core,build-essential,libpq-dev,libreadline-dev,postfix state=present
+  become: true
+
 - apt: pkg=python-pycurl,python-psycopg2 state=present
+  become: true
 
 - apt: pkg=libreadline6-dev,zlib1g-dev,libssl-dev,libyaml-dev,libsqlite3-dev,sqlite3,libxml2-dev,libxslt1-dev state=present
+  become: true
+
 - apt: pkg=autoconf,libgdbm-dev,libncurses5-dev,automake,libtool,bison,pkg-config,libffi-dev state=present
+  become: true
+
 - apt: pkg=locate,tree,ack-grep,htop,nmap,dlocate state=present
+  become: true
 
 - apt: upgrade=yes
+  become: true
 
+- apt_repository: repo='deb http://apt.newrelic.com/debian/ newrelic non-free' state=present
+- apt_key: url=https://download.newrelic.com/548C16BF.gpg state=present
+- apt: pkg=newrelic-sysmond update_cache=yes
 
