--- a/roles/bootstrap/tasks/users.yml
+++ b/roles/bootstrap/tasks/users.yml
@@ -1,14 +1,27 @@
 ---
-- group: name=admin state=present
+
+- name: create groups
+  become: true
+  group:
+    name: admin
+    state: present
 
 # Group adm is needed to read logs
 - name: Create admin users
-  action: user name="{{ item.name }}" groups=admin,adm shell=/bin/bash password="{{ item.password }}"
+  become: true
+  user:
+    name: "{{ item.name }}"
+    groups: admin,adm
+    shell: /bin/bash
+    password: "{{ item.password }}"
   with_items:
     - "{{ users }}"
 
 - name: Install authorized keys
-  action: authorized_key user="{{ item.name }}" key="{{ item.public_key }}"
+  become: true
+  authorized_key:
+    user: "{{ item.name }}"
+    key: "{{ item.public_key }}"
   with_items:
     - "{{ users }}"
 
