--- a/roles/bootstrap/handlers/main.yml
+++ b/roles/bootstrap/handlers/main.yml
@@ -1,9 +1,12 @@
 ---
 - name: update tzdata
+  become: true
   command: /usr/sbin/dpkg-reconfigure --frontend noninteractive tzdata
 
 - name: restart postfix
+  become: true
   service: name=postfix state=restarted
 
 - name: restart ssh
+  become: true
   service: name=ssh state=restarted
