--- a/roles/bootstrap/tasks/apt.yml
+++ b/roles/bootstrap/tasks/apt.yml
@@ -1,8 +1,31 @@
 ---
-- apt: update_cache=yes
-  become: true
 
-- apt: pkg=git,git-core,build-essential,libpq-dev,libreadline-dev,postfix state=present
+- name: Add extra repositories
+  become: true
+  apt_repository:
+    repo: "{{ item.repo }}"
+    state: present
+  with_items:
+    - "{{ default_repos }}"
+
+- name: Add extra repositories keys
+  become: true
+  apt_key:
+    url: "{{ item.key }}"
+    state: present
+  with_items:
+    - "{{ default_repos_keys }}"
+
+- name: Update system cache after added repositories
+  become: true
+  apt:
+    update_cache: true
+    cache_valid_time: 3600
+  when:
+    - apt_update is not defined
+
+
+- apt: pkg=git,git-core,build-essential,libpq-dev,libreadline-dev,postfix,aptitude state=present
   become: true
 
 - apt: pkg=python-pycurl,python-psycopg2 state=present
@@ -20,7 +43,6 @@
 - apt: upgrade=yes
   become: true
 
-- apt_repository: repo='deb http://apt.newrelic.com/debian/ newrelic non-free' state=present
-- apt_key: url=https://download.newrelic.com/548C16BF.gpg state=present
 - apt: pkg=newrelic-sysmond update_cache=yes
+  become: true
 
