--- a/roles/bootstrap/tasks/apt.yml
+++ b/roles/bootstrap/tasks/apt.yml
@@ -24,24 +24,16 @@
   when:
     - apt_update is not defined
 
+- name: Upgrade Packages
+  become: true
+  apt:
+    upgrade: true
+
 - name: Install minimal packages
   become: true
   apt:
     pkg: "{{ item.name }}"
     state: latest
+    force: true
   with_items:
     - "{{ var_packages }}"
-
-
-- apt: pkg=libreadline6-dev,zlib1g-dev,libssl-dev,libyaml-dev,libsqlite3-dev,sqlite3,libxml2-dev,libxslt1-dev state=present
-  become: true
-
-- apt: pkg=autoconf,libgdbm-dev,libncurses5-dev,automake,libtool,bison,pkg-config,libffi-dev state=present
-  become: true
-
-- apt: upgrade=yes
-  become: true
-
-- apt: pkg=newrelic-sysmond update_cache=yes
-  become: true
-
