--- a/roles/bootstrap/tasks/locale.yml
+++ b/roles/bootstrap/tasks/locale.yml
@@ -5,12 +5,17 @@
 - name: set locale
   become: true
   command: /usr/sbin/update-locale LANG={{locale}} LC_ALL={{locale}} LANGUAGE={{language}}
-- name: set /etc/localtime
-  become: true
-  command: /bin/cp /usr/share/zoneinfo/{{timezone}} /etc/localtime
+
+#- name: set /etc/localtime
+#  become: true
+#  command: /bin/cp /usr/share/zoneinfo/{{timezone}} /etc/localtime
+
 - name: set /etc/timezone
   become: true
-  template: src=timezone dest=/etc/timezone
-  notify: update tzdata
-
+  timezone:
+    name: "{{ timezone }}"
+  notify:
+    - update tzdata
+    - restart cron
+    - restart syslog
 
