--- a/roles/bootstrap/tasks/locale.yml
+++ b/roles/bootstrap/tasks/locale.yml
@@ -1,15 +1,13 @@
 # based on https://github.com/hatoishi/ansible-dev/blob/master/common/tasks/main.yml
 - name: generate locale
   become: true
-  command: /usr/sbin/locale-gen {{locale}}
+  locale_gen:
+    name: "{{ locale}}"
+    state: present
 
 - name: set locale
   become: true
-  command: /usr/sbin/update-locale LANG={{locale}} LC_ALL={{locale}} LANGUAGE={{language}}
-
-#- name: set /etc/localtime
-#  become: true
-#  command: /bin/cp /usr/share/zoneinfo/{{timezone}} /etc/localtime
+  command: /usr/sbin/update-locale LANG="{{ locale }}" LC_ALL="{{ locale }}" LANGUAGE="{{ language }}"
 
 - name: set /etc/timezone
   become: true
